Fix line-height too small, action bar buttons/dropdown height normalization

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -35,7 +35,7 @@ $small-breakpoint: sm;
 
 #sharp-app {
   color: $text-01;
-  line-height: 1;
+  line-height: 1.15;
 
   font-family: $font-family-base;
 
